--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,10 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 .tempo-slider {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 @keyframes logo-spin {
   from {
