--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,26 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1.5rem;
   text-align: left;
 }
+.select-row {
+  display: flex;
+  width: 100%;
+  min-width: 1100px;
+}
+.select-row > div {
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+}
+.bar-stroke {
+  margin: 0 0.5em;
+  font-size: 2rem;
+  position: relative;
+  top: -1rem;
+}
+
 .active-note {
   background-color: rgb(168, 0, 224);
 }
